# rust-postgres-crud-sqlx

./: .env  Cargo.toml  Makefile  README.md  docker-compose.yml
migrations/: 20230123154041_init.up.sql
src/: handler.rs  main.rs  response.rs  schema.rs
